fix container width showing horizontal scrollbars

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,7 +23,7 @@ small {
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .content {
